# gl_triangle

./: .gitignore  CMakeLists.txt  Mesh.cpp  Mesh.h  README.md  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp
Shaders/: frag-shader.glsl  vert-shader.glsl
